docs/1.0rc2/_sources/api/gammapy.modeling.models.SpectralModel.rst.txt
SpectralModel
=============

.. currentmodule:: gammapy.modeling.models

.. autoclass:: SpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SpectralModel.covariance
      ~SpectralModel.default_parameters
      ~SpectralModel.frozen
      ~SpectralModel.is_norm_spectral_model
      ~SpectralModel.parameters
      ~SpectralModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~SpectralModel.__call__
      ~SpectralModel.copy
      ~SpectralModel.energy_flux
      ~SpectralModel.energy_flux_error
      ~SpectralModel.evaluate_error
      ~SpectralModel.freeze
      ~SpectralModel.from_dict
      ~SpectralModel.from_parameters
      ~SpectralModel.integral
      ~SpectralModel.integral_error
      ~SpectralModel.inverse
      ~SpectralModel.inverse_all
      ~SpectralModel.plot
      ~SpectralModel.plot_error
      ~SpectralModel.reassign
      ~SpectralModel.reference_fluxes
      ~SpectralModel.spectral_index
      ~SpectralModel.to_dict
      ~SpectralModel.unfreeze

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: frozen
   .. autoattribute:: is_norm_spectral_model
   .. autoattribute:: parameters
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate_error
   .. automethod:: freeze
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: inverse_all
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: reassign
   .. automethod:: reference_fluxes
   .. automethod:: spectral_index
   .. automethod:: to_dict
   .. automethod:: unfreeze
